<resources>
    <string name="app_name">Sweet House Bingsu</string>
    <string name="Menu">ເມນູ</string>
    <string name="Ccontact">ກ່ຽວກັບຮ້ານ</string>
    <string name="txt_contact_attention">ໝາຍເຫດ : ຕ້ອງໂອນເງິນມັດຈຳມາກ່ອນເຄິ່ງໜຶ່ງ ແລະ ນຳເອົາລັກຖານການໂອນມາແຈ້ງ ແລະ ຕ້ອງມາບໍ່ໃຫ້ກາຍ 15-20 mn</string>
    <string name="txt_contact_bank">ເລກບັນຊີ: xxxx xxxx xxxx</string>
    <string name="txt_contact_facebook">Facebook: XXX XXXX XXXX</string>
    <string name="txt_contact_tel">ໂທ: XXXX XXXX</string>
    <string name="txt_contact_thanks">ຂອບໃຈທີ່ໃຊ້ບໍລິການ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="lecturer_name">ອຈ ປທ. ສະຫວາດ ໄຊປະດິດ</string>
    <string name="student_detail">ນັກສຶກສາ ຫ້ອງ 3IT (2018-2019) ພາກວິຊາວິສະວະກຳຄອມພິວເຕີ ແລະ ເຕັກໂນໂລຊີຂໍ້ມຄນຂ່າວສານ ຄະນະວິສະວະກຳສາດ ມະຫາວິທະຍາໄລແຫ່ງຊາດລາວ</string>
    <string name="lecturer_detail">ອາຈານປະຈຳ ພາກວິຊາວິສະວະກຳຄອມພິວເຕີ ແລະ ເຕັກໂນໂລຊີຂໍ້ມຄນຂ່າວສານ ຄະນະວິສະວະກຳສາດ ມະຫາວິທະຍາໄລແຫ່ງຊາດລາວ  saypadith@fe-nuol.edu.la</string>
    <string name="name_paeng">ນ. ສິລິສາ ສີວິໄຊ</string>
    <string name="name_touk">ນ. ຕຸກກິຕາ ຫຼ້າທະຄິນພອນ</string>
    <string name="name_tock">ທ. ໄພມະນີ ແກ້ວມະນີ</string>
    <string name="name_taii">ທ. ຄັດຖະພອນ ຕະມອງຊຄມ່ວງໄຊ</string>

</resources>
